traefik/traefik-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: traefik
  name: traefik
