traefik/traefik-dashboard-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.10.237.198.16.xip.io`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
